# All-about-Agentic-AI

The Complete Agentic AI Engineering/: main.py  pyproject.toml  text.txt
The Complete Agentic AI Engineering/WEEK_1/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
The Complete Agentic AI Engineering/WEEK_2/: 1_lab1.ipynb  2_lab2.ipynb
The Complete Agentic AI Engineering/WEEK_3/: pyproject.toml
The Complete Agentic AI Engineering/WEEK_3/ccoder/: README.md  pyproject.toml
The Complete Agentic AI Engineering/WEEK_3/ccoder/src/c_coder/: crew.py  main.py
The Complete Agentic AI Engineering/WEEK_3/ccoder/src/c_coder/config/: agents.yaml  tasks.yaml
The Complete Agentic AI Engineering/WEEK_3/debate/src/debate/config/: agents.yaml
The Complete Agentic AI Engineering/WEEK_3/engineering_team/src/engineering_team/config/: agents.yaml
The Complete Agentic AI Engineering/WEEK_3/financial_researcher/src/financial_researcher/config/: agents.yaml
The Complete Agentic AI Engineering/WEEK_3/stock_picker/src/stock_picker/config/: agents.yaml
The Complete Agentic AI Engineering/WEEK_4/: 4_lab4.ipynb
The Complete Agentic AI Engineering/WEEK_5/: 2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
The Complete Agentic AI Engineering/WEEK_6/: 1_lab1.ipynb
