[project]
name = "the-complete-agentic-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.159.0",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.uv.workspace]
members = [
    "WEEK_3",
]
